# skivvy-rconics

./: .gitignore  Makefile.am  README.md  autogen.sh  configure-debug.sh  configure-release.sh  configure.ac  rconics.conf.example
docs/: manual.text  notes.txt
src/: Makefile.am  plugin-rconics-rcon.cpp  plugin-rconics.cpp  rcon.cpp  test.cpp
src/include/skivvy/: plugin-rconics-rcon.h  plugin-rconics.h
src/include/skivvy-rconics/: plugin-rconics.h  rcon.h
